--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
-    "superagent": "^6.1.0",
-    "lodash": ">=4.17.21"
+    "superagent": "^6.1.0"    
   }
 }
